feat: implement v1.2 account and persistent workflow
